--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -5,7 +5,7 @@
   flex: 0 0 auto;
   margin-top: auto;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-content: flex-end;
   .Add-Project {
     width: 100%;
