--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,9 +1,16 @@
 .Dashboard {
   background-color: transparent;
   padding: 1rem;
-  height: 90vh;
+  height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
+  .Dashboard-Row {
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 2rem 0;
+  }
 }
 
 .Dashboard-title {
