--- a/src/components/Option/Option.scss
+++ b/src/components/Option/Option.scss
@@ -1,8 +1,14 @@
+@import "../../sass/colors";
+
 .Option {
   background-color: firebrick;
-  width: 6%;
-  height: 100%;
-  display: inline-flex;
+  border: 0.25rem solid $white;
+  width: 65px;
+  height: 65px;
+  display: flex;
+  flex: 0 0 auto;
   justify-content: center;
-  vertical-align: middle;
+  flex-direction: column;
+  text-align: center;
+  border-radius: 50%;
 }
