Lots on nices added
Signed-off-by: Chris Moss <chris@publicfunction.co.uk>

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,7 @@
+@import "./../../sass/colors";
+
 .Header {
+  position: relative;
   background-color: transparent;
   height: 10vh;
   width: 100%;
@@ -33,13 +36,6 @@
     background: url('./../../img/general/header/xdesign-logo.svg') no-repeat center transparent;
     width: 12rem;
     height: 100%;
-  }
-  .Header-Baseline {
-    border-bottom: 3px solid firebrick;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    flex: 0 0 85%;
   }
 }
 
