--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -2,14 +2,43 @@
 
 .Card {
   background-color: transparent;
-  width: 30vw;
-  height: 30vh;
+  width: 28vw;
+  height: 28vh;
   display: inline-flex;
   flex: 0 0 auto;
   justify-content: center;
   flex-direction: column;
   text-align: center;
   padding: 1rem;
-  border: 3px solid darkslateblue;
-  border-radius: 1rem;
+  border: inset 6px solid $darkIconColor;
+  border-radius: 0.5rem;
+  box-shadow: inset 0 0 0.25rem $baseTextColor;
+  div:first-child {
+    border-radius: 0.25rem;
+    background-color: transparent;
+    text-align: left;
+    display: flex;
+    flex: 0 0 100%;
+    flex-direction: column;
+  }
+  h4 {
+    text-transform: uppercase;
+    border-bottom: 2px solid $baseTextColor;
+    padding: 0 0 .5rem 0;
+    margin: 0 0 1rem 0;
+    display: flex;
+    flex-direction: row;
+    flex: 0 0 auto;
+    width: 100%;
+    justify-content: flex-start;
+    align-self: flex-start;
+  }
+  .Card-Content {
+    display: flex;
+    flex-direction: row;
+    flex: 1 1 auto;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
 }
