--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,8 +1,9 @@
 @import './../../sass/colors';
 
 .Footer {
+  margin-top: 2rem;
   height: 10vh;
-  min-width: 100vw;
+  min-width: 100%;
   background-color: transparent;
   padding: 1rem;
   color: $white;
