--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -1,3 +1,5 @@
+@import "colors";
+
 .App {
   width: 100%;
   height: 100%;
@@ -6,8 +8,10 @@
   flex-wrap: wrap;
   align-items: flex-start;
   align-content: flex-start;
+  justify-content: center;
   overflow: hidden;
   position: relative;
+  color: $baseTextColor;
 }
 
 .App-logo {
