--- a/src/components/Option/Option.scss
+++ b/src/components/Option/Option.scss
@@ -1,14 +1,63 @@
 @import "../../sass/colors";
 
+$size: 20px;
+
 .Option {
-  background-color: firebrick;
-  border: 0.25rem solid $white;
-  width: 65px;
-  height: 65px;
+  background-color: transparent;
+  width: 93px;
+  height: 55px;
   display: flex;
   flex: 0 0 auto;
   justify-content: center;
   flex-direction: column;
   text-align: center;
-  border-radius: 50%;
+  position: relative;
+  &:after {
+    content: "";
+    position: absolute;
+    border-top-right-radius: 5px;
+    border-top: 2px solid $baseTextColor;
+    border-right: 2px solid $baseTextColor;
+    top: 0;
+    left: 4.6rem;
+    width: 1.1rem;
+    height: 2.45rem;
+  }
+  &:before {
+    content: '';
+    position: absolute;
+    background-color: transparent;
+    width: 0;
+    height: 0;
+    top: 0;
+    left: 0;
+  }
+  b {
+    width: 100%;
+    height: 100%;
+    &:before {
+      content: "";
+      position: absolute;
+      top: 48px;
+      left: 71px;
+      width: 0;
+      height: 0;
+      transform: rotateZ(-45deg);
+      border-top: 3px solid $baseTextColor;
+      border-right: 25px solid $baseTextColor;
+    }
+    &:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 80%;
+      height: 100%;
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
+      border-top: 2px solid $baseTextColor;
+      border-left: 2px solid $baseTextColor;
+      border-bottom: 2px solid $baseTextColor;
+    }
+  }
 }
