--- a/src/components/Option/Option.scss
+++ b/src/components/Option/Option.scss
@@ -3,14 +3,16 @@
 $size: 20px;
 
 .Option {
-  background-color: transparent;
-  width: 93px;
-  height: 55px;
   display: flex;
   flex: 0 0 auto;
-  justify-content: center;
   flex-direction: column;
-  text-align: center;
+  width: 93px;
+  height: 55px;
+  background-color: transparent;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+
   position: relative;
   &:after {
     content: "";
@@ -33,8 +35,8 @@ $size: 20px;
     left: 0;
   }
   b {
-    width: 100%;
-    height: 100%;
+    width: 0;
+    height: 0;
     &:before {
       content: "";
       position: absolute;
@@ -43,7 +45,7 @@ $size: 20px;
       width: 0;
       height: 0;
       transform: rotateZ(-45deg);
-      border-top: 3px solid $baseTextColor;
+      border-top: 2px solid $baseTextColor;
       border-right: 25px solid $baseTextColor;
     }
     &:after {
