--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -13,7 +13,10 @@ body {
   padding: 0;
   font-family: 'Maven Pro', 'Roboto', sans-serif;
   font-size: 16px;
-  background: url('./img/general/background/location-screen.png') no-repeat center transparent;
+  background-image: url('./img/general/background/location-screen.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   color: $white;
   z-index: 0;
 }
@@ -37,8 +40,35 @@ ul {
 }
 
 .Parent {
+  position: relative;
   display: flex;
   flex-direction: column;
   flex:  0 0 auto;
   width: 90%;
+  .MobiGlow {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    bottom: 60px;
+    left: 44.5%;
+    width: 10%;
+    height: 25%;
+    .MobiGlowTop {
+      display: flex;
+      flex-direction: column;
+      flex:  0 0 auto;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(to top, rgba(255,255,255, 0.75) 10%, rgba(255,255,255,0) 70%);
+    }
+    .MobiGlowBottom {
+      display: flex;
+      flex-direction: column;
+      flex:  0 0 auto;
+      width: 100%;
+      height: 25%;
+      background: radial-gradient(to bottom, rgba(255,255,255, 0.75) 10%, rgba(255,255,255,0) 70%);
+    }
+  }
 }
