--- a/src/components/Card/Live/Live.scss
+++ b/src/components/Card/Live/Live.scss
@@ -1,6 +1,11 @@
-.Live {
-  background-color: deeppink;
-  width: 100%;
-  height: 100%;
-  border-radius: 1rem;
+.Card {
+  .Live {
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    text-align: left;
+  }
 }
