--- a/src/components/Card/StarCitizen/StarCitizen.scss
+++ b/src/components/Card/StarCitizen/StarCitizen.scss
@@ -1,6 +1,39 @@
-.Star-Citizen {
-  background-color: limegreen;
-  width: 100%;
-  height: 100%;
-  border-radius: 1rem;
+.Card {
+  .Star-Citizen {
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    text-align: left;
+    ul {
+      margin: 1rem 0;
+      & > li {
+        display: flex;
+        flex: 0 0 auto;
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-between;
+        margin: 0.5rem 0;
+        ul {
+          margin: 0;
+          padding: 0;
+        }
+        label {
+          font-weight: 700;
+          display: flex;
+          flex: 0 0 auto;
+          flex-direction: column;
+          justify-self: flex-start;
+        }
+        .content {
+          display: flex;
+          flex: 0 0 auto;
+          flex-direction: column;
+          justify-self: flex-end;
+        }
+      }
+    }
+  }
 }
