--- a/src/components/Card/StarCitizen/StarCitizen.scss
+++ b/src/components/Card/StarCitizen/StarCitizen.scss
@@ -7,6 +7,13 @@
     height: 100%;
     overflow: hidden;
     text-align: left;
+    .orgDetails {
+      display: flex;
+      flex: 0 0 auto;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+    }
     ul {
       margin: 1rem 0;
       & > li {
@@ -19,6 +26,7 @@
         ul {
           margin: 0;
           padding: 0;
+          width: 100%;
         }
         label {
           font-weight: 700;
