--- a/src/components/Card/Twitch/Twitch.scss
+++ b/src/components/Card/Twitch/Twitch.scss
@@ -7,5 +7,13 @@
     height: 100%;
     overflow: hidden;
     text-align: left;
+    div {
+      &.Offline-Container {
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
   }
 }
